2004-01-22  Petter Risholm  <risholm@stud.ntnu.no>

	* mx-inlines.cc	(MX_ND_REDUCTION, MX_ND_CUMULATIVE_OP):
	Simplify calculation of number of elements in retval.

	* Array.cc (Array<T>::assignN): Eliminate unnecessray code for
	filling when RHS is scalar and dimension lengths agree.

2004-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (distclean): Remove mx-ops.h, $(MX_OP_INC),
	$(VX_OP_INC), $(MX_OP_SRC), $(VX_OP_SRC), and $(OPTS_INC).

2004-01-22  Petter Risholm  <risholm@stud.ntnu.no>

	* Array.cc (Array<T>::resize_and_fill): Correctly copy old elements.
	(Array<T>::assign2): Check for RHS dimensions larger than 2.

2004-01-21  Petter Risholm  <risholm@stud.ntnu.no>

	* Array.h (Array<T>::chop_trailing_singletons): New function.
	* Array.cc (Array<T>::assignN): Use it on LHS.

	* Array.cc (Array<T>::assignN): Fix incorrectly nested if statement.
	Retrieve scalar element by passin 0 instead of an index array.
	Check for singleton dimensions where RHS is matrix or higher dimension.
	Make sure index is in bounds.

2004-01-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-ieee.cc (octave_ieee_init): Ensure that octave_Inf,
	octave_NaN, and octav_NA values are always initialized.  Check
	floating point format, not HAVE_ISINF, HAVE_FINITE, or HAVE_ISNAN
	to decide whether to do IEEE initialization.

2004-01-06  David Bateman  <dbateman@free.fr>

 	* CNDArray.cc (ComplexNDArray::any_element_is_inf_or_nan, 
 	ComplexNDArray::all_elements_are_real, ComplexNDArray::all_integers,
 	ComplexNDArray::too_large_for_float): New functions
 
 	* CNDArray.cc (operator <<, operator >>): New IO operators.
 	* CNDArray.h: Provide decls.
 	* dNDArray.cc (operator <<, operator >>): New IO operators.
 	* dNDArray.h: Provide decls.

2003-12-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mx-ops: Delete bnda x bnda, b x bnda, and bnda x b ops since
	they are already defined in boolNDArray.cc.

	* Array-util.cc (get_zero_len_size): Delete.